--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="contact-col">
-            <form action="https://formsubmit.co/shivanigusain06@gmail.com" method="post">
+            <form action="formhandler.php" method="post">
                 <input type="text" placeholder="Enter Your Name" name="name" required>
                 <input type="email" placeholder="Enter Email Address" name="email" required>
                 <input type="text" placeholder="Enter Your Subject" name="Subject" required>
