--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,8 @@
             </div>
         </div>
         <div class="contact-col">
-            <form action="formhandler.php" method="post">
+            <form action="https://api.web3forms.com/submit" method="post">
+                <input type="hidden" name="access_key" value="9ba2fa92-31e4-4991-9a38-9ddf820ac70c">
                 <input type="text" placeholder="Enter Your Name" name="name" required>
                 <input type="email" placeholder="Enter Email Address" name="email" required>
                 <input type="text" placeholder="Enter Your Subject" name="Subject" required>
