--- a/contact.html
+++ b/contact.html
@@ -58,8 +58,8 @@
             </div>
         </div>
         <div class="contact-col">
-            <form action="formhandler.php" method="post"><!-- https://api.web3forms.com/submit-->
-               <!-- <input type="hidden" name="access_key" value="9ba2fa92-31e4-4991-9a38-9ddf820ac70c">-->
+            <form action="" method="post"><!-- https://api.web3forms.com/submit or formhandler.php-->
+               <!-- <input type="hidden" name="access_key" value="your_access_key">-->
                 <input type="text" placeholder="Enter Your Name" name="name" required>
                 <input type="email" placeholder="Enter Email Address" name="email" required>
                 <input type="text" placeholder="Enter Your Subject" name="Subject" required>
@@ -75,10 +75,10 @@
 <!--end-->
 <section class="end">
         <div class="icons">
-            <i class="fa fa-facebook-f"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedin"></i>
-            <i class="fa fa-discord"></i>
+            <a href="https://www.facebook.com/"><i class="fa fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a> 
+            <a href= "https://www.discord.com/"><i class="fa fa-discord"></i></a>
             
         </div>
         <p align="center">Made by Shivani Gusain</p>
