--- a/about.html
+++ b/about.html
@@ -71,10 +71,10 @@
 <section class="end">
     <center><a href="contact.html" class="hero-btn"><span>Contact us</span></a></center>
         <div class="icons">
-            <i class="fa fa-facebook-f"></i>
-            <i class="fa fa-instagram"></i>
-            <i class="fa fa-linkedin"></i>
-            <i class="fa fa-discord"></i>
+             <a href="https://www.facebook.com/"><i class="fa fa-facebook-f"></i></a>
+            <a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/"><i class="fa fa-linkedin"></i></a> 
+            <a href= "https://www.discord.com/"><i class="fa fa-discord"></i></a>
             
         </div>
         <p align="center">Made by Shivani Gusain</p>
