--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
             </div>
         </div>
         <div class="contact-col">
-            <form action="" method="post"><!-- https://api.web3forms.com/submit or formhandler.php-->
+            <form action=""><!-- https://api.web3forms.com/submit or formhandler.php  method="post"-->
                <!-- <input type="hidden" name="access_key" value="your_access_key">-->
                 <input type="text" placeholder="Enter Your Name" name="name" required>
                 <input type="email" placeholder="Enter Email Address" name="email" required>
